[package]
name = "routerbase"
version = "0.1.1"
edition = "2021"
description = "Rust client for the RouterBase OpenAI-compatible API gateway."
license = "MIT"
repository = "https://github.com/RouterBase/routerbase-rust"
homepage = "https://routerbase.com"
documentation = "https://docs.routerbase.com/"
readme = "README.md"
keywords = ["routerbase", "openai", "llm", "api"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
